2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-libraries.patch:
	Regenerated post-merge.

2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Don't pass JAVAC through to the OpenJDK
	build and disable JAVA_HOME before building.
	* Makefile.in: Regenerated.
	
2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Make plugin install optional again.
	* b/Makefile.in,
	* b/configure: Regenerated.
	* b/configure.ac:
	Fix regressions due to merge.
	* b/generated/sun/tools/jconsole/Version.java:
	Regenerated.

2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-ecj.patch:
	Add fix for JMX @Override issue.
	
2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.in: Regenerated.
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_de.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_es.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_fr.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_it.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_ja.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_ko.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_sv.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_zh_CN.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_zh_HK.java,
	* generated/com/sun/java/swing/plaf/gtk/resources/gtk_zh_TW.java,
	* generated/com/sun/swing/internal/plaf/basic/resources/basic.java,
	* generated/com/sun/swing/internal/plaf/basic/resources/basic_de.java,
	* generated/com/sun/swing/internal/plaf/basic/resources/basic_es.java,
	* generated/com/sun/swing/internal/plaf/basic/resources/basic_fr.java,
	* generated/com/sun/swing/internal/plaf/basic/resources/basic_it.java,
	* generated/com/sun/swing/internal/plaf/basic/resources/basic_ja.java,