@@ -1,5 +1,12 @@
 2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* Makefile.am:
+	More out-of-source-directory build
+	fixes.
+	* Makefile.in: Regenerated.
+	
+2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* patches/icedtea-libraries.patch:
 	Regenerated post-merge.
 
